--- a/css/style.css
+++ b/css/style.css
@@ -6,51 +6,51 @@
   clear: both;
 }
 
-body  {
-  font-family:  'Lato',;
+body {
+  font-family:  'Lato';
   background-color: #f2f2f2;
+}
+a {
+  display: inline-block;
+  text-decoration: none;
 }
 .f-raleway {
   font-family: 'Raleway';
 }
-.inner  {
+.inner {
   width: 1100px;
   margin: 0 auto;
 }
-a {
-  text-decoration: none;
-  color: #fff;
-}
-a:hover {
-  color: #333;
-  transition: all 0.3s;
-}
 
-.header  {
+.header {
   width: 100%;
   position: fixed;
   background-color: #fff;
+  z-index: 1;
 }
-.btn  {
+.header_inner {
+  padding: 15px 0;
+}
+.btn {
   font-size: 12px;
   color: #fff;
   background-color: #74cfae;
   text-align: center;
-  cursor: pointer;
+  transition: all 0.3s;
 }
-.contact_btn  {
+.pull_right {
+  text-align: right;
+}
+.contact_btn {
   padding: 14px 12px;
-  float: right;
-  margin-top: 10px;
 }
 .bolt {
-  padding: 15px;
   float: left;
   color: #4e4e4e;
 }
 
 .main  {
-  padding-top: 60px;
+  padding-top: 72px;
   background-color: #f2f2f2;
 }
 
@@ -65,7 +65,7 @@ a:hover {
   text-align: center;
 }
 .headline {
-  padding-top:  20px; 
+  margin-top:  20px; 
 }
 .headline_text  {
   font-size: 30px;
@@ -73,110 +73,113 @@ a:hover {
   text-align: center;
 }
 
-.WHAT-WE-CAN-DO {
+.what-we-can-do {
   background-color: #74cfae;
+  padding-top:  50px; 
+}
+.iphone_area {
+  font-size: 0;
 }
 .iphone_title_text_box {
-  float: right;
-  padding-top: 70px;
-  width: 65%;
+  width: 60%;
+  display: inline-block;
+  vertical-align: top;
+  padding-top:  20px; 
 }
 .iphone_picture {
-  float: left;
-  padding-top: 50px;
+  text-align: center;
+  width: 40%;
+  display: inline-block; 
 }
-.sub_title1 {
+.what-we-can-do_title {
   font-size: 24px;
   color: #fff;
   text-align: center;
-  width: 105%;
 }
-.iphone_text  {
+.iphone_text {
   color: #fff;
   font-size: 20px;
-  padding-top: 35px;
+  margin-top: 35px;
   text-align: center;
-  width: 105%;
-  word-break: break-all;
-  line-height: 1.2;
 }
 
-.article {
+.our-latest-work {
   padding: 60px 0 70px;  
 }
-.sub_title2 {
+.our_latest_work_title {
   font-size:  24px;
   text-align: center;  
 }
 .text_box {
-  margin-top: 90px; 
-  width: 85%;
-}
-.work_text  {
-  width: 72%;
-  font-size: 20px;
-  padding-right:  90px; 
+  margin-top: 90px;
   text-align: center;
-  margin-left: 73px;
 }
-.email_btn  {
+.work_text {
+  font-size: 20px;
+  text-align: center;
+  width: 52%;
+  display: inline-block;
+}
+.email_btn {
   padding: 14px 20px;
-  float:  right;
-  margin-top: -55px;
-
 }
-.OUR-LATEST-WORK-list img  {
+.work_btn {
+  margin-left: 90px;
+  display: inline-block;
+  vertical-align: top;
+}
+.btn:hover {
+  color: #333;
+}
+.our-latest-work-list img {
   opacity: 0.7;
-  margin: 0;
-  padding: 0;
+  transition: all 0.3s;
 }
-.OUR-LATEST-WORK-list  > li  {
+.our-latest-work-list > li {
   float: left;
   list-style: none;
 }
-.OUR-LATEST-WORK-list {
+.our-latest-work-list {
   margin-top: 40px; 
 }
-.OUR-LATEST-WORK-img  li {
+.our-latest-work-list li {
   margin-top: 80px;
   margin-left: 100px;
 }
-.OUR-LATEST-WORK-list  > li:nth-child(3n+1)  {
+.our-latest-work-list > li:nth-child(3n+1) {
   margin-left: 0; 
 }
-.OUR-LATEST-WORK-list > li:nth-child(-n+3) {
+.our-latest-work-list > li:nth-child(-n+3) {
   margin-top: 0;
 }
-.OUR-LATEST-WORK-list  > li:hover  img {
-  transition: 0.3s;
+.our-latest-work-list > li:hover img {
   opacity: 1;
 }
-.OUR-SKILLS {
+.oue-skills {
   background-color: #333;
-  padding-top:  70px; 
+  padding:  70px  0 100px; 
 }
-.sub_title3 {
+.our_skills_title {
   color: #fff;
   font-size: 24px;
   text-align: center;
 }
 .circle {
-  width: max-content;
+  text-align: center;
 }
-figure  {
-  float: left;
+.circle_mix {
   margin-left:  180px; 
-  padding-top: 70px;
+  margin-top: 70px;
+  display: inline-block;
 }
-figure:nth-child(1) {
-  margin-left: 40px;
+.circle_mix:first-child {
+  margin-left: 0;
 }
-figcaption  {
+.circle_text {
   color: #fff;
   text-align: center;
   font-size: 16px;
-  padding-top:  20px;
-  padding-bottom: 100px; 
+  margin-top:  20px;
 }
 
 .nav {
@@ -188,35 +191,24 @@ figcaption  {
   text-align: center;
   cursor: pointer;
   width: 185px;
-  padding: 50px  0;
+  padding: 25px 0;
+  transition: all 0.3s;
+}
+li {
+  display: inline-block;
 }
 .sns_list {
-  display: table;
-  margin: 0 auto;
-  padding: 0;
-  width: 80%;
   text-align: center;
-  text-decoration: none;
-}
-.sns_list li {
-  display: table-cell;
-  min-width: 50px;
-}
-.sns_list li i {
-  display: block;
-  width: 100%;
-  text-decoration: none;
 }
 .sns:hover {
   background-color: #fff;
-  transition: 0.3s;
 }
 
-.footer  {
+.footer {
   background-color: #74cfae;
+  padding: 20px 0 25px;
 }
 .footer_text {
-  padding: 20px 0 25px;
   color:  #fff;
-  float:  right;
+  text-align: right;
 }
