画像の隙間の微調整

--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,7 @@ a {
   }
   .our-latest-work-list {
     margin-top: 40px; 
+    font-size: 0;
   }
   .our-latest-work-list > li:nth-child(5) {
     margin-top: 0;
