--- a/css/style.css
+++ b/css/style.css
@@ -207,65 +207,6 @@ a {
   text-align: right;
 }
 
-/*  SP  */
-@media screen and (max-width: 767px) {
-  .inner {
-    width: 97%;
-  }
-
-  .humberger {
-    position: relative;
-    height: 30px;
-    width: 36px;
-    display: inline-block;
-    box-sizing: border-box;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 10px;
-  }
-  .humberger div {
-    position: absolute;
-    height: 1px;
-    width: 15px;
-    border-radius: 4px;
-    display: inline-block;
-    box-sizing: border-box;
-    background-color: #f2f2f2;
-    
-  }
-  .humberger div:nth-of-type(1) {
-    top: 8px;
-  }
-  .humberger div:nth-of-type(2) {
-    top: 14px;
-  }
-  .humberger div:nth-of-type(3) {
-    bottom: 7px;
-  }
-  .title {
-    padding:160px 0 130px;
-  }
-  .main_title {
-    font-size: 80px;
-  }
-  .headline_text  {
-    font-size: 30px;
-    margin-top: 20px;
-  }
-  
-  .nav_sns {
-    padding: 50px 20px;
-  }
-  .sns {
-    color: #74cfae;
-    background-color: #f2f2f2;
-    text-align: center;
-    cursor: pointer;
-    width: 185px;
-    padding: 20px 0;
-    transition: all 0.3s;
-  }
-}
 
 /*  TAB SP  */
 @media screen and (max-width:  1199px) {
@@ -291,19 +232,12 @@ a {
   .our-latest-work-list > li {
     float: none;
     list-style: none;
-    margin-top: 80px;
-    margin-left: 0px;
-  }
-  .our-latest-work-list {
-    margin-top: 40px; 
+    margin-top: 0;
+    margin-left: 0;
     font-size: 0;
-    display: block;
   }
-  .our-latest-work-list > li:nth-child(5) {
-    margin-top: 0;
-  }
-  .our-latest-work-list > li:nth-child(6) {
-    margin-top: 0;
+  .our-latest-work-list > li:nth-child(4) {
+    margin-top: 80px;
   }
   .our-latest-work-list > li:hover a {
     opacity: 0.7;
@@ -330,8 +264,69 @@ a {
     background-color: #f2f2f2;
     text-align: center;
     cursor: pointer;
-    width: 180px;
+    width: 185px;
     padding: 20px 0;
     transition: all 0.3s;
+  }
+}
+
+/*  SP  */
+@media screen and (max-width: 767px) {
+  .contact_btn {
+    display: none;
+  }
+  .humberger {
+    position: relative;
+    height: 30px;
+    width: 36px;
+    display: block;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    float: right;
+  }
+  .humberger div {
+    position: absolute;
+    height: 1px;
+    width: 15px;
+    border-radius: 4px;
+    display: inline-block;
+    box-sizing: border-box;
+    background-color: #f2f2f2;
+  }
+  .humberger div:nth-of-type(1) {
+    top: 8px;
+  }
+  .humberger div:nth-of-type(2) {
+    top: 14px;
+  }
+  .humberger div:nth-of-type(3) {
+    bottom: 7px;
+  }
+  .title {
+    padding:160px 0 130px;
+  }
+  .main_title {
+    font-size: 80px;
+  }
+  .headline_text  {
+    font-size: 30px;
+    margin-top: 20px;
+  }
+  .nav_sns {
+    padding: 50px 0;
+  }
+  .sns {
+    color: #74cfae;
+    background-color: #f2f2f2;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    padding: 20px 0;
+    transition: all 0.3s;
+  }
+  .sns_item {
+    display: block;
   }
 }
